--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -21,6 +21,8 @@
     }
   },
   "common": {
+    "type": "type",
+    "views": "views",
     "channel": "channel",
     "channels": "channels",
     "date": "date",
@@ -129,10 +131,10 @@
         "name": "Donate",
         "status": {
           "any": "Some of the data types are not yet (successfull) gathered. You can continue, but some data will be missing",
-          "notReady": "<b>{{name}}</b> data",
-          "ready": "<b>{{name}}</b> data ready"
+          "notReady": "<b>{{name}}</b> data not yet ready",
+          "ready": "<b>{{name}}</b> data ready to donate"
         },
-        "subname": "Here you can learn more about what your data will be used for, and safely donate it"
+        "subname": "Click here to go to the donation screen"
       },
       "removeCard": {
         "name": "Exclude data",
@@ -142,10 +144,6 @@
     },
     "explore": {
       "description": "This step is optional, but aren't you curious?",
-      "exploreCard": {
-        "missing": "Data not yet gathered",
-        "status": "Gathered <b>{{date}}</b> from <b>{{source}}</b>"
-      },
       "title": "Explore"
     },
     "gather": {
@@ -158,10 +156,8 @@
       },
       "gatherCard": {
         "click": "Click here to gather the data that Google has about your <b>browsing</b>, <b>search</b> and <b>Youtube</b> history",
-        "empty": "<b>{{name}}</b> history",
-        "failedGet": "Failed to get <b>{{name}}</b> history",
-        "failedUpdate": "",
-        "success": "Gathered <b>{{name}}</b> history"
+        "empty": "<b>{{name}}</b>",
+        "success": "Gathered <b>{{name}}</b> on <b>{{date}}</b>"
       },
       "title": "Gather"
     },
