--- a/public/locales/nl/translation.json
+++ b/public/locales/nl/translation.json
@@ -20,6 +20,9 @@
     }
   },
   "common": {
+    "today": "vandaag",
+    "type": "type",
+    "views": "bekeken",
     "channel": "kanaal",
     "channels": "kanalen",
     "date": "datum",
@@ -129,10 +132,10 @@
         "status": {
           "any": "Sommige datatypes zijn nog niet (succesvol) verzameld. U kunt doorgaan, maar er zullen enkele gegevens ontbreken",
           "none": "Ga naar de kolom <b>Verzamelen</b> voor instructies over het verzamelen van uw digitale voetafdrukken",
-          "notReady": "<b>{{name}}</b> gegevens",
-          "ready": "<b>{{name}}</b> gegevens klaar"
+          "notReady": "<b>{{name}}</b> gegevens nog niet verzameld",
+          "ready": "<b>{{name}}</b> gegevens klaar om te doneren"
         },
-        "subname": "Hier kunt u meer te weten komen over waar uw gegevens voor worden gebruikt en deze veilig doneren"
+        "subname": "Klik hier om naar het donatiescherm te gaan"
       },
       "removeCard": {
         "name": "Gegevens uitsluiten",
@@ -142,10 +145,6 @@
     },
     "explore": {
       "description": "Deze stap is optioneel, maar ben je niet nieuwsgierig?",
-      "exploreCard": {
-        "missing": "Gegevens nog niet verzameld",
-        "status": "Verzameld <b>{{date}}</b> van <b>{{source}}</b>"
-      },
       "title": "Verkennen"
     },
     "gather": {
@@ -157,7 +156,7 @@
         "step3": "<b>Klik en houd</b> de map/het bestand vast en <b>sleep</b> het naar het blauwe veld hieronder"
       },
       "gatherCard": {
-        "click": "Klik hier om de gegevens te verzamelen die Google heeft over uw <b>browse-</b> , <b>zoek-</b> en <b>YouTube</b> -geschiedenis",
+        "click": "Klik hier om de gegevens te verzamelen die Google heeft over uw <b>browse-</b>, <b>zoek-</b> en <b>YouTube</b>-geschiedenis",
         "empty": "<b>{{name}}</b> geschiedenis",
         "failedGet": "Kan <b>{{name}}</b> niet ophalen",
         "failedUpdate": "",
