--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -21,6 +21,8 @@
     }
   },
   "common": {
+    "type": "type",
+    "views": "views",
     "channel": "channel",
     "channels": "channels",
     "date": "date",
@@ -32,7 +34,10 @@
     "top": "top",
     "total": "total",
     "visit": "visit",
-    "visits": "visits"
+    "visits": "visits",
+    "search": "search",
+    "searches": "searches",
+    "queries": "queries"
   },
   "dataTypes": {
     "browsing": {
@@ -126,10 +131,10 @@
         "name": "Donate",
         "status": {
           "any": "Some of the data types are not yet (successfull) gathered. You can continue, but some data will be missing",
-          "notReady": "<b>{{name}}</b> data",
-          "ready": "<b>{{name}}</b> data ready"
+          "notReady": "<b>{{name}}</b> data not yet ready",
+          "ready": "<b>{{name}}</b> data ready to donate"
         },
-        "subname": "Here you can learn more about what your data will be used for, and safely donate it"
+        "subname": "Click here to go to the donation screen"
       },
       "removeCard": {
         "name": "Exclude data",
@@ -139,10 +144,6 @@
     },
     "explore": {
       "description": "This step is optional, but aren't you curious?",
-      "exploreCard": {
-        "missing": "Data not yet gathered",
-        "status": "Gathered <b>{{date}}</b> from <b>{{source}}</b>"
-      },
       "title": "Explore"
     },
     "gather": {
@@ -155,10 +156,8 @@
       },
       "gatherCard": {
         "click": "Click here to gather the data that Google has about your <b>browsing</b>, <b>search</b> and <b>Youtube</b> history",
-        "empty": "<b>{{name}}</b> history",
-        "failedGet": "Failed to get <b>{{name}}</b> history",
-        "failedUpdate": "",
-        "success": "Gathered <b>{{name}}</b> history"
+        "empty": "<b>{{name}}</b>",
+        "success": "Gathered <b>{{name}}</b> on <b>{{date}}</b>"
       },
       "title": "Gather"
     },
@@ -166,12 +165,12 @@
       "first": {
         "content1": "The first step is to click on a card in the <b>Gather</b> column on the left. This will walk you through the steps for gathering this data and loading it into this application.",
         "content2": "At this point, <b>the data will only be stored on your own device</b>. You can then first use this application to explore your data, and you can also choose to exlude data that you do not want to donate.",
-        "header1": "Get started by gathering some data"
+        "header": "Get started by gathering some data"
       },
       "second": {
         "content1": "First, you can explore</b> your data. This step is optional, so if you just want to donate your data you can skip it.",
         "content2": "Second, you can <b>donate</b> you data. If you click the donate card, we will walk you through the steps. You can also first click the <b>exclude data</b> card, which lets you search and delete items from your data that you don't want to share.",
-        "header2": "Now that you have data, you can do two things"
+        "header": "Now that you have data, you can do two things"
       }
     }
   },
