--- a/locales/nl/translation.json
+++ b/locales/nl/translation.json
@@ -20,6 +20,9 @@
     }
   },
   "common": {
+    "today": "vandaag",
+    "type": "type",
+    "views": "bekeken",
     "channel": "kanaal",
     "channels": "kanalen",
     "date": "datum",
@@ -31,7 +34,10 @@
     "top": "top",
     "total": "totaal",
     "visit": "bezocht",
-    "visits": "bezocht"
+    "visits": "bezocht",
+    "search": "zoek",
+    "searches": "zoekopdrachten",
+    "queries": "zoektermen"
   },
   "dataTypes": {
     "browsing": {
@@ -126,10 +132,10 @@
         "status": {
           "any": "Sommige datatypes zijn nog niet (succesvol) verzameld. U kunt doorgaan, maar er zullen enkele gegevens ontbreken",
           "none": "Ga naar de kolom <b>Verzamelen</b> voor instructies over het verzamelen van uw digitale voetafdrukken",
-          "notReady": "<b>{{name}}</b> gegevens",
-          "ready": "<b>{{name}}</b> gegevens klaar"
+          "notReady": "<b>{{name}}</b> gegevens nog niet verzameld",
+          "ready": "<b>{{name}}</b> gegevens klaar om te doneren"
         },
-        "subname": "Hier kunt u meer te weten komen over waar uw gegevens voor worden gebruikt en deze veilig doneren"
+        "subname": "Klik hier om naar het donatiescherm te gaan"
       },
       "removeCard": {
         "name": "Gegevens uitsluiten",
@@ -139,10 +145,6 @@
     },
     "explore": {
       "description": "Deze stap is optioneel, maar ben je niet nieuwsgierig?",
-      "exploreCard": {
-        "missing": "Gegevens nog niet verzameld",
-        "status": "Verzameld <b>{{date}}</b> van <b>{{source}}</b>"
-      },
       "title": "Verkennen"
     },
     "gather": {
@@ -154,7 +156,7 @@
         "step3": "<b>Klik en houd</b> de map/het bestand vast en <b>sleep</b> het naar het blauwe veld hieronder"
       },
       "gatherCard": {
-        "click": "Klik hier om de gegevens te verzamelen die Google heeft over uw <b>browse-</b> , <b>zoek-</b> en <b>YouTube</b> -geschiedenis",
+        "click": "Klik hier om de gegevens te verzamelen die Google heeft over uw <b>browse-</b>, <b>zoek-</b> en <b>YouTube</b>-geschiedenis",
         "empty": "<b>{{name}}</b> geschiedenis",
         "failedGet": "Kan <b>{{name}}</b> niet ophalen",
         "failedUpdate": "",
@@ -167,12 +169,12 @@
       "first": {
         "content1": "Klik op een van de kaarten in de <b>Verzamelen<b/> kolom. Je krijgt dan instructies te zien om je data te downloaden en in deze applicatie in te laden.",
         "content2": "Op dit moment zal je data alleen <b>op je eigen apparaat opgeslagen worden<b/>. Je kunt dan eerst je data verkennen, en eventueel data verwijderen die je niet wilt delen, alvorens je doneert.",
-        "header1": "Begin met het verzamelen van data"
+        "header": "Begin met het verzamelen van data"
       },
       "second": {
         "content1": "Ten eerste kun je de data <b>Verkennen</b>. Deze stap is optioneel, dus als je hier alleen bent om te doneren dan kun je dit ook overslaan.",
         "content2": "Ten tweede kun je de data <b>Doneren</b>. Klik hiervoor op de <b>Doneren</b> kaart.",
-        "header2": "Nu je data binnen is, kun je twee dingen doen"
+        "header": "Nu je data binnen is, kun je twee dingen doen"
       }
     }
   },
