--- a/public/locales/nl/translation.json
+++ b/public/locales/nl/translation.json
@@ -17,7 +17,9 @@
     "type": "type",
     "views": "bekeken",
     "visit": "bezocht",
-    "visits": "bezocht"
+    "visits": "bezocht",
+    "copied": "Gekopieerd"
+
   },
   "dataTypes": {
     "browsing": {
@@ -37,7 +39,7 @@
     "annotate": {
       "continue": "Ga verder met doneren",
       "dropdown": "",
-      "header": "Beantwoord de volgende vragen astublieft",
+      "header": "Beantwoord de volgende vragen alstublieft",
       "noadd": "Niks toe te voegen!",
       "pleaseanswer": "Beantwoord alle vragen om verder te gaan",
       "question": "In welke mate gaat de content van dit kanaal over nieuws of actualiteiten?"
@@ -46,10 +48,8 @@
       "button": "Doneer je gegevens",
       "buttonRetry": "Probeer nog een keer te versturen",
       "thankyou": "Bedankt voor je donatie!",
-      "cleanup": "Als je niet van plan bent om je data verder te verkennen, dan kun je deze hier verwijderen. Let er op dat dit alleen de data uit deze applicatie verwijderd. Als je data op je computer heb opgeslagen dan wil je deze wellicht ook verwijderen.",
-      "continue": "Ga verder naar",
+      "cleanup": "Je kunt direct je data verwijderen. Let er op dat dit alleen de data uit deze applicatie verwijderd. Als je data op je computer heb opgeslagen dan wil je deze wellicht ook verwijderen.",
       "delete": "Verwijder data",
-      "deleteContinue": "Verwijder data en ga verder naar",
       "donated": {
         "failure": "<b>{{filename}}</b> kunnen niet worden ingediend. Probeer het opnieuw en neem contact op met de onderzoekers of het onderzoeksbureau als het probleem aanhoudt",
         "success": "{{n}} <b>{{filename}}</b> items gedoneerd"
@@ -70,7 +70,7 @@
     },
     "step1": {
       "description": "Wat doneer je?",
-      "title": "Informed consent"
+      "title": "Data donatie"
     },
     "step2": {
       "description": "Zijn dit uw gegevens?",
@@ -178,7 +178,7 @@
       "ok": "Ok, got it!",
       "step1": "In de eerste stap verzamel je data door op een van de kaarten in de <b>Verzamelen</b> kolom te klikken. Na deze stap heb je nog niet je data gedoneerd (dat is stap 3!)",
       "step2": "De tweede stap is optioneel. Je kunt hier je data <b>Verkennen</b> als je benieuwd bent naar je eigen digitale sporen. Als je hier data tegenkomt die je liever niet met ons deelt, dan kun je deze ook verwijderen.",
-      "step3": "De laatste stap is om je data te <b>Doneren</b> voor wetenschappelijk onderzoek. Je data wordt pas verstuurd zodra je alle stappen doorlopen hebt en je toestemming hebt gegeven. In de kolom staat ook de <b>Exlude data<b/> kaart, waarmee je data kunt zoeken en uitsluiten van de donatie, voor het geval je dit nog niet gedaan hebt in de <b>Verkennen</b> stap."
+      "step3": "De laatste stap is om je data te <b>Doneren</b> voor wetenschappelijk onderzoek. Je data wordt pas verstuurd zodra je alle stappen doorlopen hebt en je toestemming hebt gegeven. In de kolom staat ook de <b>Exlude data</b> kaart, waarmee je data kunt zoeken en uitsluiten van de donatie, voor het geval je dit nog niet gedaan hebt in de <b>Verkennen</b> stap."
     }
   },
   "routing": {
