--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -16,7 +16,8 @@
     "type": "type",
     "views": "views",
     "visit": "visit",
-    "visits": "visits"
+    "visits": "visits",
+    "copied": "copied"
   },
   "dataTypes": {
     "browsing": {
@@ -45,10 +46,8 @@
       "button": "Donate your data",
       "buttonRetry": "Try sending the data again",
       "thankyou": "Thank you for your donation!",
-      "cleanup": "If you don't intend to further explore your data, you can now delete it. Note that this only deletes the data from this application. If you stored data on your computer, you might also want to delete it there.",
-      "continue": "Continue to",
+      "cleanup": "You can immediately delete your data. Note that this only deletes the data from this application. If you stored data on your computer, you might also want to delete it there.",
       "delete": "Delete data",
-      "deleteContinue": "Delete data and continue to",
       "donated": {
         "failure": "Failed to submit <b>{{filename}}</b> data. Please try again, and contact the researchers or survey company if the problem persists",
         "success": "Donated {{n}} <b>{{filename}}</b> items"
@@ -69,7 +68,7 @@
     },
     "step1": {
       "description": "What are you donating?",
-      "title": "Informed consent"
+      "title": "Data donation"
     },
     "step2": {
       "description": "Is this your data?",
